--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Palindroms</title>
+		<title>Iterator</title>
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 		<meta name="HandheldFriendly" content="True"/> <!--В некоторых случаях смартфоны автоматически изменяют масштаб страницы, лучше эту возможность отключать-->
 		<!-- saved from url=(0014)about:internet -->
@@ -12,39 +12,7 @@
 	</head>
 	<body>
 
-		<script>
-
-			'use strict'
-
-			let CheckIsPalindrom = (str) => {
-				let rusAlphabet = 'ёйцукенгшщзхфывапролджэячсмитбюЁЙЦУКЕНГШЩЗХФЫВАПРОЛДЖЭЯЧСМИТБЮ'; //Можно переписать на set и использовать set.has(value) вместо includes			
-				let arrFiltered = str.split('').filter( (letter) => rusAlphabet.includes(letter) );
-
-				let result = arrFiltered.reduce( (sum, letter, letterIndex) => {
-					letter = letter.toLowerCase();
-					let mirrorLetter = arrFiltered[arrFiltered.length - 1 - letterIndex].toLowerCase();
-
-					if (letter === 'ё') {
-						letter = 'е';
-					}
-					if (mirrorLetter === 'ё') {
-						mirrorLetter = 'е';
-					}
-					if (letter !== mirrorLetter) {
-						sum = false;
-					}
-
-					return sum;
-				}, true);
-
-				return result;
-			}
-
-			let input = prompt('Введите строку');
-
-			console.log( (CheckIsPalindrom(input)) ? 'Это палиндром' : 'Это не палиндром');
-
-		</script>
+		<script src="js/script_iterator.js"></script>
 
 	</body>
 </html>
